# DreamOfVoxels

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Performance_Report.txt  ]  a.c  cmake_install.cmake  game  main.c  new.c  todo
.cache/clangd/index/: main.c.7E5AC10289E1B5DF.idx
includes/: chunk.h  debug_logger.h  event_handler.h  input_handler.h  performance.h  player.h  resource_tracker.h  scene_3d_game.h  scene_voxel_game.h  std_includes.h  voxel.h
includes/core/: block.h  voxel.h
includes/scene/: scene_3d_game.h
includes/scenes/: scene_3d_game.h
includes/sprites/: block.h  player.h
includes/utils/: debug_renderer.h  mesher.h
pilot1/: CMakeLists.txt  main.c
pilot1/includes/scenes/: scene_3d_game.h
pilot1/includes/utils/: performance.h
pilot1/src/scenes/: scene_3d_game.c
pilot1/src/utils/: performance.c
src/: chunk.c  debug_logger.c  event_handler.c  input_handler.c  main.c  performance.c  player.c  resource_tracker.c  scene_3d_game.c  scene_voxel_game.c  voxel.c
src/core/: block.c  voxel.c
src/scene/: scene_3d_game.c
src/scenes/: scene_3d_game.c
src/sprites/: block.c  player.c
src/utils/: mesher.c  performance.c  rescource_tracker.c  resource_tracker.c
